<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>de.haumacher</groupId>
	<artifactId>phoneblock</artifactId>
	<version>1.4.6-SNAPSHOT</version>
	
	<name>PhoneBlock</name>
	<description>Ad blocker for your Fritz!Box</description>
	<inceptionYear>2022</inceptionYear>
	
	<licenses>
		<license>
			<name>GPL-3.0-only</name>
			<url>https://www.gnu.org/licenses/gpl-3.0.html</url>
		</license>
	</licenses>
	
	<developers>
		<developer>
			<name>Bernhard Haumacher</name>
			<organizationUrl>https://haumacher.de</organizationUrl>
		</developer>
	</developers>

	<organization>
		<url>https://phoneblock.net</url>
	</organization>

	<scm>
		<developerConnection>scm:git:https://github.com/haumacher/phoneblock.git</developerConnection>
	  <tag>HEAD</tag>
  </scm>

	<properties>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>

		<!-- Note: The mybatis SQL framework requires Java method parameter names 
			to allow using the method parameter names as SQL variables. -->
		<maven.compiler.parameters>true</maven.compiler.parameters>
		
		<maven.build.timestamp.format>yyyy-MM-dd'T'HH:mm:ssXXX</maven.build.timestamp.format>

		<project.build.sourceEncoding>utf-8</project.build.sourceEncoding>
		
		<font-awesome.version>6.4.0</font-awesome.version>
		<bulma.version>0.9.4</bulma.version>
		<bulma-collapsible.version>1.0.3</bulma-collapsible.version>
		<chartjs.version>4.1.2</chartjs.version>
		<shariff.version>3.2.1</shariff.version>
		<jquery.version>3.6.4</jquery.version>
		<swagger-ui.version>4.18.3</swagger-ui.version>
		
		<msgbuf.version>1.1.2</msgbuf.version>
		
		<phoneblock.server.deployUrl>http://localhost:8080/manager/text</phoneblock.server.deployUrl>
		<phoneblock.server.id>phoneblock</phoneblock.server.id>
		<phoneblock.contextpath>/phoneblock</phoneblock.contextpath>
	</properties>

	<dependencies>
		<dependency>
			<groupId>de.haumacher.msgbuf</groupId>
			<version>${msgbuf.version}</version>
			<artifactId>msgbuf-api</artifactId>
		</dependency>
	
		<dependency>
			<groupId>javax.servlet</groupId>
			<artifactId>javax.servlet-api</artifactId>
			<version>4.0.1</version>
		</dependency>

		<dependency>
			<groupId>org.pac4j</groupId>
			<artifactId>javaee-pac4j</artifactId>
			<version>7.1.0</version>
		</dependency>

		<dependency>
			<groupId>org.pac4j</groupId>
			<artifactId>pac4j-oauth</artifactId>
			<version>5.7.1</version>
		</dependency>
	
		<dependency>
			<groupId>com.googlecode.ez-vcard</groupId>
			<artifactId>ez-vcard</artifactId>
			<version>0.11.3</version>
		</dependency>

	   <dependency>
			<groupId>com.theokanning.openai-gpt3-java</groupId>
			<artifactId>service</artifactId>
			<version>0.16.0</version>       
	   </dependency>
   
   		<dependency>
			<groupId>com.google.api-client</groupId>
			<artifactId>google-api-client</artifactId>
			<version>2.2.0</version>
			
			<!-- Exclude logging implementation, replaced by jcl-over-slf4j -->
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>
		
		<dependency>
		    <groupId>com.google.auth</groupId>
		    <artifactId>google-auth-library-oauth2-http</artifactId>
		    <version>1.16.1</version>
		</dependency>
	
		<dependency>
			<groupId>org.apache.httpcomponents</groupId>
			<artifactId>httpcore</artifactId>
			<version>4.4.16</version>
		</dependency>

		<dependency>
		    <groupId>com.opencsv</groupId>
		    <artifactId>opencsv</artifactId>
		    <version>5.7.1</version>

			<!-- Exclude logging implementation, replaced by jcl-over-slf4j -->
			<exclusions>
				<exclusion>
					<groupId>commons-logging</groupId>
					<artifactId>commons-logging</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<!-- Forced update of opencsv dependency. -->
		<dependency>
		    <groupId>org.apache.commons</groupId>
		    <artifactId>commons-text</artifactId>
		    <version>1.10.0</version>
		</dependency>

		<dependency>
			<groupId>org.jsoup</groupId>
			<artifactId>jsoup</artifactId>
			<version>1.16.1</version>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<version>2.2.222</version>
		</dependency>

		<dependency>
			<groupId>org.mybatis</groupId>
			<artifactId>mybatis</artifactId>
			<version>3.5.13</version>
		</dependency>

		<dependency>
		    <groupId>org.webjars.npm</groupId>
		    <artifactId>swagger-ui-dist</artifactId>
		    <version>${swagger-ui.version}</version>
		</dependency>

		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>font-awesome</artifactId>
			<version>${font-awesome.version}</version>
		</dependency>

		<dependency>
		    <groupId>org.webjars.npm</groupId>
		    <artifactId>bulma</artifactId>
		    <version>${bulma.version}</version>
		</dependency>
		
		<dependency>
			<groupId>org.webjars.npm</groupId>
			<artifactId>github-com-creativebulma-bulma-collapsible</artifactId>
			<version>${bulma-collapsible.version}</version>
		</dependency>

		<dependency>
		    <groupId>org.webjars</groupId>
		    <artifactId>chartjs</artifactId>
		    <version>${chartjs.version}</version>
		</dependency>

		<dependency>
			<groupId>org.shredzone.shariff</groupId>
			<artifactId>backend</artifactId>
			<version>1.24</version>
		</dependency>

		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>shariff</artifactId>
			<version>${shariff.version}</version>
		</dependency>

		<dependency>
			<groupId>org.webjars</groupId>
			<artifactId>jquery</artifactId>
			<version>${jquery.version}</version>
		</dependency>

		<dependency>
			<groupId>com.sun.mail</groupId>
			<version>1.6.2</version>
		    <artifactId>javax.mail</artifactId>
		</dependency>

		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>slf4j-api</artifactId>
		    <version>2.0.7</version>
		</dependency>

		<dependency>
		    <groupId>org.slf4j</groupId>
		    <artifactId>jcl-over-slf4j</artifactId>
		    <version>2.0.7</version>
		</dependency>

		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>slf4j-tinylog</artifactId>
			<version>2.6.2</version>
		</dependency>

		<dependency>
			<groupId>org.tinylog</groupId>
			<artifactId>tinylog-impl</artifactId>
			<version>2.6.2</version>
		</dependency>

		<dependency>
		    <groupId>org.junit.jupiter</groupId>
		    <artifactId>junit-jupiter</artifactId>
		    <version>5.10.2</version>
		    <scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<filters>
			<filter>.phoneblock</filter>
		</filters>
	
		<resources>
			<resource>
				<directory>${project.build.sourceDirectory}</directory>
				<excludes>
					<exclude>**/*.java</exclude>
				</excludes>
				<filtering>true</filtering>
			</resource>
		</resources>

		<plugins>
		
			<plugin>
				<groupId>de.haumacher.msgbuf</groupId>
				<version>${msgbuf.version}</version>
				<artifactId>msgbuf-generator-maven-plugin</artifactId>
				
				<executions>
					<execution>
						<id>generate-protocols</id>
						<goals>
							<goal>generate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-enforcer-plugin</artifactId>
				<version>3.1.0</version>
				<executions>
					<execution>
						<id>enforce-maven</id>
						<goals>
							<goal>enforce</goal>
						</goals>
						<configuration>
							<rules>
								<requireMavenVersion>
									<version>3.2.5</version>
								</requireMavenVersion>
							</rules>
						</configuration>
					</execution>
				</executions>
			</plugin>
      
			<plugin>
			  <groupId>org.apache.maven.plugins</groupId>
			  <artifactId>maven-resources-plugin</artifactId>
			  <version>3.3.0</version>
			</plugin>
			
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.10.1</version>
				<configuration>
					<fork>true</fork>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-clean-plugin</artifactId>
				<version>3.2.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-deploy-plugin</artifactId>
				<version>3.0.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-install-plugin</artifactId>
				<version>3.0.1</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>3.3.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>4.0.0-M3</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-war-plugin</artifactId>
				<version>3.3.2</version>

				<configuration>
				</configuration>

				<executions>
					<execution>
						<id>create-war</id>

						<goals>
							<goal>war</goal>
						</goals>
						
						<configuration>
							<archiveClasses>true</archiveClasses>
							
							<filters>
								<filter>.phoneblock</filter>
								<filter>${project.build.outputDirectory}/phoneblock.properties</filter>
							</filters>
							
							<filteringDeploymentDescriptors>true</filteringDeploymentDescriptors>
							
					        <webResources>
					            <resource>
					                <directory>src/main/webapp</directory>
					                <filtering>true</filtering>
					            </resource>
					        </webResources>							
						</configuration>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.tomcat.maven</groupId>
				<artifactId>tomcat7-maven-plugin</artifactId>
				<version>2.2</version>

				<executions>
					<execution>
						<id>deploy-to-production</id>
						<phase>install</phase>
						<goals>
							<goal>redeploy</goal>
						</goals>
					</execution>
				</executions>

				<configuration>
					<ignorePackaging>true</ignorePackaging>
					<url>${phoneblock.server.deployUrl}</url>
					<server>${phoneblock.server.id}</server>
					<path>${phoneblock.contextpath}</path>
				</configuration>
			</plugin>

			<!-- Check for well-known vulnerabilities. -->
			<!-- Execute explicitly with `mvn dependency-check:check`. -->
			<plugin>
			    <groupId>org.owasp</groupId>
			    <artifactId>dependency-check-maven</artifactId>
			    <version>7.3.0</version>
		        <configuration>
	                <format>ALL</format>
	                <skipProvidedScope>true</skipProvidedScope>
		        </configuration>
			</plugin>
			
			<!-- 
				To update dependencies to latest releases use: 
				mvn versions:use-latest-releases versions:update-properties -DgenerateBackupPoms=false
				
				Show updates of plugins:
				mvn versions:display-plugin-updates
			-->

			<plugin>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
			    <version>2.15.0</version>
				
				<executions>
					<execution>
						<goals>
							<goal>use-latest-releases</goal>
							<goal>update-properties</goal>
						</goals>
					</execution>
				</executions>
				
				<configuration>
          			<ruleSet>
						<ignoreVersions>
							<!-- Exclude alpha and milestone builds. -->
							<ignoreVersion>
								<type>regex</type>
								<version>(.+-alpha.*|.+-M.*|.+-RC.*|26962ce.*)</version>
							</ignoreVersion>								
						</ignoreVersions>
					</ruleSet>
				</configuration>
			</plugin>

		</plugins>
	</build>
</project>